修改仓库信息为yufenghui/hello

--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,7 @@ box: golang
 dev:
   steps:
     - setup-go-workspace:
-        package-dir: github.com/cloudnativego/hello
+        package-dir: github.com/yufenghui/hello
 
     - script:
         name: env
@@ -25,7 +25,7 @@ dev:
 build:
   steps:
     - setup-go-workspace:
-        package-dir: github.com/cloudnativego/hello
+        package-dir: github.com/yufenghui/hello
 
     - script:
         name: env
@@ -66,14 +66,5 @@ deploy:
        cmd: /pipeline/source/hello
        port: "8080"
        tag: latest
-       repository: cloudnativego/book-hello
+       repository: yufenghui/hello
        registry: https://registry.hub.docker.com
-
-   - cng/cf-deploy:
-       api: $API
-       user: $USER
-       password: $PASSWORD
-       org: $ORG
-       space: $SPACE
-       appname: wercker-step-hello
-       docker_image: cloudnativego/book-hello
