--- a/wercker.yml
+++ b/wercker.yml
@@ -67,4 +67,4 @@ deploy:
        port: "8080"
        tag: latest
        repository: yufenghui/hello
-       registry: https://registry.hub.docker.com
+       registry: https://registry.hub.docker.com/v2
