修改deploy的docker仓库配置

--- a/wercker.yml
+++ b/wercker.yml
@@ -57,13 +57,13 @@ build:
         code: |
           cp -R ./ ${WERCKER_OUTPUT_DIR}
 
-
 deploy:
   steps:
     - internal/docker-push:
-       username: $DOCKER_USERNAME
-       password: $DOCKER_PASSWORD
-       cmd: /pipeline/source/hello
-       port: "8080"
-       tag: latest
-       repository: yufenghui/hello
+        registry: https://registry.hub.docker.com/v2
+        repository: yufenghui/hello
+        username: $DOCKER_USERNAME
+        password: $DOCKER_PASSWORD
+        cmd: /pipeline/source/hello
+        port: "8080"
+        tag: latest
