修改deploy的docker仓库配置3

--- a/wercker.yml
+++ b/wercker.yml
@@ -60,10 +60,9 @@ build:
 deploy:
   steps:
     - internal/docker-push:
-        registry: https://registry.hub.docker.com/v2
         repository: yufenghui/hello
-        username: $USERNAME
-        password: $PASSWORD
+        username: $DOCKER_USERNAME
+        password: $DOCKER_PASSWORD
         cmd: /pipeline/source/hello
         port: "8080"
         tag: latest
