修改deploy的docker仓库配置4

--- a/wercker.yml
+++ b/wercker.yml
@@ -60,9 +60,10 @@ build:
 deploy:
   steps:
     - internal/docker-push:
-        repository: yufenghui/hello
-        username: $DOCKER_USERNAME
-        password: $DOCKER_PASSWORD
-        cmd: /pipeline/source/hello
-        port: "8080"
-        tag: latest
+      registry: https://registry.hub.docker.com
+      repository: yufenghui/hello
+      username: $DOCKER_USERNAME
+      password: $DOCKER_PASSWORD
+      cmd: /pipeline/source/hello
+      port: "8080"
+      tag: latest
